--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^6.30.1",
+    "remixicon": "^4.6.0",
     "sweetalert2": "^11.23.0",
     "tailwindcss": "^4.1.13"
   },
